--- a/libs/plugins/a-comp.lv2/a-comp.ttl.in
+++ b/libs/plugins/a-comp.lv2/a-comp.ttl.in
@@ -103,8 +103,18 @@
         unit:unit unit:db ;
     ] ,
     [
-        a lv2:InputPort, lv2:ControlPort ;
+        a lv2:OutputPort, lv2:ControlPort ;
         lv2:index 8 ;
+        lv2:name "Input Level" ;
+        lv2:symbol "inlevel" ;
+        lv2:default -45.000000 ;
+        lv2:minimum -45.000000 ;
+        lv2:maximum 0.000000 ;
+        unit:unit unit:db ;
+    ] ,
+    [
+        a lv2:InputPort, lv2:ControlPort ;
+        lv2:index 9 ;
         lv2:name "Sidechain" ;
         lv2:symbol "sidech" ;
         lv2:default 0.000000 ;
@@ -114,7 +124,7 @@
     ] ,
     [
         a lv2:InputPort, lv2:ControlPort ;
-        lv2:index 9 ;
+        lv2:index 10 ;
         lv2:name "Enable" ;
         lv2:symbol "enable" ;
         lv2:default 1 ;
@@ -126,20 +136,20 @@
 
     lv2:port [
         a lv2:InputPort, lv2:AudioPort ;
-        lv2:index 10 ;
+        lv2:index 11 ;
         lv2:symbol "lv2_audio_in_1" ;
         lv2:name "Audio Input 1" ;
     ] ,
     [
         a lv2:InputPort, lv2:AudioPort ;
-        lv2:index 11 ;
+        lv2:index 12 ;
         lv2:symbol "lv2_sidechain_in" ;
         lv2:name "Sidechain Input" ;
         lv2:portProperty lv2:isSideChain ;
     ],
     [
         a lv2:OutputPort, lv2:AudioPort ;
-        lv2:index 12 ;
+        lv2:index 13 ;
         lv2:symbol "lv2_audio_out_1" ;
         lv2:name "Audio Output 1" ;
     ] ;
