--- a/libs/plugins/a-comp.lv2/a-comp.ttl.in
+++ b/libs/plugins/a-comp.lv2/a-comp.ttl.in
@@ -10,6 +10,13 @@
 	foaf:name "Ardour Team" ;
 	foaf:homepage <http://ardour.org/> .
 
+unit:db-display
+	a unit:Unit ;
+	rdfs:label "decibels" ;
+	rdfs:label "dB" ;
+	unit:render "%4.1f" ;
+	unit:symbol "dB" .
+
 <urn:ardour:a-comp>
     a lv2:Plugin, doap:Project, lv2:CompressorPlugin ;
 
@@ -90,7 +97,7 @@
         lv2:default 0.000000 ;
         lv2:minimum 0.000000 ;
         lv2:maximum 45.000000 ;
-        unit:unit unit:db ;
+        unit:unit unit:db-display ;
     ] ,
     [
         a lv2:OutputPort, lv2:ControlPort ;
@@ -100,7 +107,7 @@
         lv2:default -45.000000 ;
         lv2:minimum -45.000000 ;
         lv2:maximum 0.000000 ;
-        unit:unit unit:db ;
+        unit:unit unit:db-display ;
     ] ,
     [
         a lv2:OutputPort, lv2:ControlPort ;
@@ -110,7 +117,7 @@
         lv2:default -45.000000 ;
         lv2:minimum -45.000000 ;
         lv2:maximum 0.000000 ;
-        unit:unit unit:db ;
+        unit:unit unit:db-display ;
     ] ,
     [
         a lv2:InputPort, lv2:ControlPort ;
